--- a/JugnooNewDriver/jugnooNewDriver/build.gradle
+++ b/JugnooNewDriver/jugnooNewDriver/build.gradle
@@ -67,7 +67,6 @@ android {
         buildConfigField "String", "MAPS_PRIVATE_KEY", "\"\""
         buildConfigField "boolean", "MAPS_APIS_SIGN", "false"
         buildConfigField "String", "MAPS_BROWSER_KEY", "\"AIzaSyDRlxbwMF-rjd0m2jitT5Czg_pjQP4kqRk\""
-        buildConfigField "String", "LIVE_URL", "\"https://prod.taxiye.com:4012\""
         dimension "full"
         buildConfigField "String", "MAPS_CACHING_SERVER_URL", "\"https://maps-api.tookanapp.com\""
 
@@ -111,14 +110,57 @@ android {
     productFlavors {
         taxiye {
             applicationId "com.taxiye.driver"
+
+            def HOST = "prod.taxiye.com"
+
             buildConfigField "String", "APP_DB_ID", "\"taxiye\""
             buildConfigField "String", "MAPS_CLIENT", "\"\""
             buildConfigField "String", "MAPS_PRIVATE_KEY", "\"\""
-            buildConfigField "String", "MAPS_BROWSER_KEY", "\"\""
             buildConfigField "String", "STRIPE_CLIENT_ID_LIVE", "\"\""
             buildConfigField "boolean", "MAPS_APIS_SIGN", "false"
             buildConfigField "String", "STRIPE_KEY_LIVE", "\"\""
-            buildConfigField "String", "MAPS_BROWSER_KEY", "\"AIzaSyCc7cCs0yv9EK7lNobBxtHUxM2Q5iq5G_0\""
+            buildConfigField "String", "MAPS_BROWSER_KEY", "\"AIzaSyDRlxbwMF-rjd0m2jitT5Czg_pjQP4kqRk\""
+            
+            buildConfigField "String", "DEV_SERVER_URL", "\"https://$HOST:8008\""
+            buildConfigField "String", "LIVE_URL", "\"https://$HOST:4012\""
+            buildConfigField "String", "TRIAL_SERVER_URL", "\"https://$HOST:8200\""
+            buildConfigField "String", "DEV_1_SERVER_URL", "\"https://$HOST:8013\""
+            buildConfigField "String", "DEV_2_SERVER_URL", "\"https://$HOST:8014\""
+            buildConfigField "String", "DEV_3_SERVER_URL", "\"https://$HOST:8015\""
+            buildConfigField "String", "CHAT_URL_DEV", "\"https://$HOST:8003\""
+            buildConfigField "String", "CHAT_URL_LIVE", "\"https://$HOST:8003\""
+
+            def addConstant = {constantName, constantValue ->
+                manifestPlaceholders += [ (constantName):constantValue]
+                buildConfigField "String", "${constantName}", "\"${constantValue}\""
+            }
+            addConstant("authorities", applicationId+".PhotoProvider") // copy these four lines in your flavour and change the authorities's value
+
+            // copy these four lines in your flavour and change the authorities's value
+        }
+
+        taxiyeStaging {
+            applicationId "com.taxiye.driver"
+
+
+            def HOST = "staging.taxiye.com"
+
+            buildConfigField "String", "APP_DB_ID", "\"taxiye\""
+            buildConfigField "String", "MAPS_CLIENT", "\"\""
+            buildConfigField "String", "MAPS_PRIVATE_KEY", "\"\""
+            buildConfigField "String", "STRIPE_CLIENT_ID_LIVE", "\"\""
+            buildConfigField "boolean", "MAPS_APIS_SIGN", "false"
+            buildConfigField "String", "STRIPE_KEY_LIVE", "\"\""
+            buildConfigField "String", "MAPS_BROWSER_KEY", "\"AIzaSyDRlxbwMF-rjd0m2jitT5Czg_pjQP4kqRk\""
+
+            buildConfigField "String", "DEV_SERVER_URL", "\"https://$HOST:8012\""
+            buildConfigField "String", "LIVE_URL", "\"https://$HOST:4012\""
+            buildConfigField "String", "TRIAL_SERVER_URL", "\"https://$HOST:8200\""
+            buildConfigField "String", "DEV_1_SERVER_URL", "\"https://$HOST:8013\""
+            buildConfigField "String", "DEV_2_SERVER_URL", "\"https://$HOST:8014\""
+            buildConfigField "String", "DEV_3_SERVER_URL", "\"https://$HOST:8015\""
+            buildConfigField "String", "CHAT_URL_DEV", "\"https://$HOST:8095\""
+            buildConfigField "String", "CHAT_URL_LIVE", "\"https://$HOST:4010\""
 
             def addConstant = {constantName, constantValue ->
                 manifestPlaceholders += [ (constantName):constantValue]
