--- a/JugnooNewDriver/jugnooNewDriver/build.gradle
+++ b/JugnooNewDriver/jugnooNewDriver/build.gradle
@@ -209,6 +209,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.2.1'
     compile "com.google.firebase:firebase-core:17.4.3"
     compile "com.google.android.gms:play-services-auth:$project.playServices"
+    implementation "com.google.android.gms:play-services-auth-api-phone:$project.playServices"
     implementation 'com.squareup.retrofit:retrofit:1.9.0'
     implementation 'com.squareup.okhttp3:okhttp:3.12.2'
     implementation 'com.jakewharton.retrofit:retrofit1-okhttp3-client:1.0.2'
